<resources>
    <string name="app_name">Enlist</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Confirm">Confirm</string>
    <string name="Return">Return</string>
    <string name="app_moto">Stop clogging your bookmarks</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title">Title</string>
    <string name="edition">Edition</string>
    <string name="year">Year</string>
    <string name="enlist">Enlist</string>
    <string name="my_books">My Books</string>
    <string name="my_movies">My Movies</string>
    <string name="search">Search</string>
    <string name="books">Books</string>
    <string name="movies">Movies</string>
    <string name="admin">Admin</string>
</resources>
