<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_books"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_books" />
        <item
            android:id="@+id/nav_my_movies"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/my_movies" />
    </group>

    <item android:title="@string/search">
        <menu>
            <item
                android:id="@+id/nav_search_books"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/books" />
            <item
                android:id="@+id/nav_search_movies"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/movies" />
        </menu>
    </item>

    <item android:title="@string/admin">
        <menu>
            <item
                android:id="@+id/nav_add_item"
                android:icon="@drawable/ic_menu_share"
                android:title="New item" />
        </menu>
    </item>

</menu>
